# rust

./: .gitignore  Cargo.toml  GUIDE.md  README.md  docker-compose.yml
setup/: Dockerfile.rust
src/: lib.rs  nifti.rs  vars.rs
