[package]
name = "nifti   "
version = "0.1.0"
authors = ["test user <test@mail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nifti = "0.14.0"

[dev-dependencies]
nifti = "0.14.0"


[build-dependencies]
nifti = "0.14.0"

[[bin]]
name = "hello"
path = "src/hello.rs"